# HW_13_REST

./: .coverage  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: Makefile  conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: dc5a112c5afb_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test.db  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
