[tool.poetry]
name = "HW_11"
version = "0.1.0"
description = ""
authors = ["Nton118 <114150459+Nton118@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
psycopg2 = "^2.9.7"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.18"
fastapi-jwt-auth = "^0.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
libgravatar = "^1.0.4"
python-dotenv = "^1.0.0"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.34.0"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
